Fixed spacing issue with send an email

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -226,6 +226,8 @@ a:hover {
 .clickable-link {
   all: unset;
   font-weight: 600;
+  font-size: 14px;
+  
 }
 
 .clickable-link:hover {
